alterado o ti o tipo do input de Senha

--- a/Mural/index.html
+++ b/Mural/index.html
@@ -59,7 +59,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text" id="inputGroup-sizing-sm">Senha</span>
                 </div>
-                <input id="senha" type="text" class="sem_borda form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+                <input id="senha" type="password" class="sem_borda form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
                 <button type="button" class="btn btn-outline-secondary btn-sm" onclick="update_msgs();send(senha); clear_input(titulo); clear_input(mensagem); clear_input(autor); clear_input(senha)">Enviar</button>           
             </div>
         </div></center>
