--- a/Mural/index.html
+++ b/Mural/index.html
@@ -16,13 +16,13 @@
     <!--BARRA DE NAVEGACAO-->
     <ul id="nav" class="nav justify-content-center ">
             <li class="nav-item">
-                <button type="button" class="nav-link btn btn-outline-secondary btn-sm" onclick="alert_login();update_msgs(); set_hidden(enviar); set_hidden(pesquisar)">Inicio</button>
+                <button type="button" class="nav-link btn btn-outline-secondary btn-sm" onclick="alert_login();update_msgs(true); set_hidden(enviar); set_hidden(pesquisar)">Inicio</button>
             </li>
             <li class="nav-item">
-                <button type="button" href="#enviar" class="nav-link btn btn-outline-secondary btn-sm" onclick="update_msgs(); show(enviar); set_hidden(pesquisar);">Enviar Mensagem</button>
+                <button type="button" href="#enviar" class="nav-link btn btn-outline-secondary btn-sm" onclick="update_msgs(true); show(enviar); set_hidden(pesquisar);">Enviar Mensagem</button>
             </li>
             <li class="nav-item">
-            <button type="button" href="#pesquisar" class="nav-link btn btn-outline-secondary btn-sm" onclick="update_msgs(); show(pesquisar); set_hidden(enviar)">Pesquisar</button>              
+            <button type="button" href="#pesquisar" class="nav-link btn btn-outline-secondary btn-sm" onclick="update_msgs(true); show(pesquisar); set_hidden(enviar)">Pesquisar</button>              
             </li>
             <li class="nav-item">
             <button type="button" href="#apagar" class="nav-link btn btn-outline-secondary btn-sm" onclick="get_msgs_front(); set_hidden(enviar); set_hidden(pesquisar)">Apagar</button>
