--- a/Mural/index.html
+++ b/Mural/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Mural PSoft</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script></head>
@@ -77,7 +78,7 @@
                 -->
             </div>
             <input id="titulo_pesquisa" type="text" class="sem_borda form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm"> 
-            <button type="button" class="btn btn-outline-secondary btn-sm" onclick="search(get_select_value(), titulo_pesquisa); clear_input(titulo_pesquisa)">Enviar</button>
+            <button type="button" class="btn btn-outline-secondary btn-sm" onclick="search(get_select_value(), titulo_pesquisa)">Enviar</button>
         </div>
     </div></center>
     <br><br>
@@ -97,7 +98,12 @@
 
     <div id="listagem" hidden="false"></div>
     <br><br><br>
-    <div id="login_alert" hidden="false"></div>
+    <div id="alert" hidden="false"></div>
     </div>
+    <p id="topo" class="float-right" hidden="false">
+        <a href="#" class="voltar-ao-topo">
+            <i class="material-icons">arrow_drop_up</i>
+        </a>
+    </p>
     <script src="./client.js"></script>
 </body>
